--- a/mayar.html
+++ b/mayar.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Web Page!</h1>
+    <h1>Welcome to our project </h1>
     <p>This is a basic HTML page with some styling.</p>
     
     <a href="https://www.google.com" class="button" target="_blank">Go to Google</a>
